--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "yarik/oot",
+    "name": "y78/oot",
     "authors": [
         {
             "name": "Yarik",
-            "email": "n.yd@yandex.ru"
+            "email": "yarik@yarik.info"
         }
     ],
     "require": {},
